[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capacity-tool"
version = "0.1.0"
description = "Airline same-store capacity analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.5,<1.6",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.1",
  "pytest>=8.0",
]

[project.scripts]
capacity-ingest = "capacity_tool.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"capacity_tool.sql" = ["*.sql"]
